--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React-parcel",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build ./src/index.html",
+    "dev": "parcel ./src/index.html"
   },
   "jest": {
     "setupFiles": [
