--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "parcel-bundler": "^1.12.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-test-renderer": "^16.11.0",
     "typescript": "^3.7.2"
   }
